<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_title_height"
        android:layout_marginBottom="@dimen/screen_margin"
        android:background="@color/colorTitle"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/screen_margin"
        android:paddingEnd="@dimen/screen_margin">

        <ImageView
            android:id="@+id/bar_title_img_menu"
            android:layout_width="@dimen/bar_title_height"
            android:layout_height="@dimen/bar_title_height"
            android:contentDescription="@string/txt_menu"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/bar_title_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/txt_title_size"
            tools:text="我的订单" />

        <SearchView
            android:id="@+id/bar_title_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:queryHint="请输入搜索关键词" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_title_layout_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        android:background="@color/colorTitle"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/bar_title_tv_view_order"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_view_orders"
            android:textSize="@dimen/txt_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/bar_title_tv_add_order"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_add_order"
            android:textSize="@dimen/txt_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/bar_title_tv_view_cinema"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_view_cinema"
            android:textSize="@dimen/txt_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/bar_title_tv_add_cinema"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_add_cinema"
            android:textSize="@dimen/txt_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/bar_title_tv_exit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_quit"
            android:textSize="@dimen/txt_title_size" />

    </LinearLayout>


</LinearLayout>