<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:text="@string/dialog_add_cinema_title"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/dialog_add_order_layout_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginLeft="@dimen/screen_margin"
            android:background="@null"
            android:gravity="center"
            android:text="选择地区"
            android:textColor="@color/colorGrayer"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/dialog_add_order_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/colorSky"
            android:textSize="@dimen/txt_title_size"
            tools:text="广西壮族自治区柳州市鱼峰区" />

    </RelativeLayout>

    <EditText
        android:id="@+id/dialog_add_cinema_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:hint="请输入影院名称" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_add_cinema_btn_save"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_add_cinema_save" />

        <Button
            android:id="@+id/dialog_add_cinema_btn_cancel"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_add_cinema_cancel" />

    </LinearLayout>

</LinearLayout>